--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-homework-template",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://AntonBabenko96.github.io/react-node-team-app/",
+  "homepage": "https://GoitStudentsWorks.github.io/react_node_bc_43_AntonBabenko96/",
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
